// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Radio Basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-orientation="vertical"
      className="charcoal-radio-group"
      role="radiogroup"
    >
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={true}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-orientation="vertical"
      className="charcoal-radio-group"
      role="radiogroup"
    >
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={true}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Invalid 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-invalid={true}
      aria-orientation="vertical"
      className="charcoal-radio-group"
      role="radiogroup"
    >
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={true}
          checked={true}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={true}
          checked={false}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={true}
          checked={false}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio PartialDisabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-orientation="vertical"
      className="charcoal-radio-group"
      role="radiogroup"
    >
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={true}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Readonly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-orientation="vertical"
      className="charcoal-radio-group"
      role="radiogroup"
    >
      <label
        aria-disabled={false}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={true}
          className="charcoal-radio__input"
          disabled={false}
          name="name"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        aria-disabled={true}
        className="charcoal-radio"
      >
        <input
          aria-invalid={false}
          checked={false}
          className="charcoal-radio__input"
          disabled={true}
          name="name"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;
